[gd_scene load_steps=11 format=3 uid="uid://bi0862uluur74"]

[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="1_egx3d"]
[ext_resource type="Script" path="res://scenes/gui/scr_main_menu.gd" id="2_wb8tk"]
[ext_resource type="Texture2D" uid="uid://u4wi42685ktd" path="res://sprites/gui/spr_logo.png" id="3_fpmeo"]
[ext_resource type="Shader" path="res://shaders/scr_souptime.gdshader" id="3_ku6te"]
[ext_resource type="Texture2D" uid="uid://13bvkhre7iec" path="res://sprites/spr_white_pixel.png" id="5_rqmy0"]
[ext_resource type="Script" path="res://code/scr_autoscroll_component.gd" id="6_vbxvf"]
[ext_resource type="Script" path="res://code/scr_editor_helper_tool.gd" id="8_ipbln"]

[sub_resource type="Gradient" id="Gradient_wbkcl"]
colors = PackedColorArray(0, 0, 0, 1, 0.307143, 0.307143, 0.307143, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qpb5b"]
gradient = SubResource("Gradient_wbkcl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0obdr"]
shader = ExtResource("3_ku6te")
shader_parameter/Gradient = SubResource("GradientTexture1D_qpb5b")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_egx3d")
script = ExtResource("2_wb8tk")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0.00784314, 0.00392157, 0, 1)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_0obdr")
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0.00784314, 0.00392157, 0, 1)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 144.0
offset_bottom = 64.0
texture = ExtResource("3_fpmeo")

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 60.0
offset_right = 160.0
offset_bottom = 71.0
bbcode_enabled = true
text = "[center]rpg"
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_top = 60.0
offset_right = 160.0
offset_bottom = 71.0
bbcode_enabled = true
text = "[center]bike spirit"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 67.0
offset_right = 128.0
offset_bottom = 112.0
theme_override_constants/separation = -1

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../LoadGameButton")
focus_next = NodePath("../LoadGameButton")
focus_previous = NodePath("../QuitButton")
mouse_filter = 2
button_mask = 0
text = " new game"
alignment = 0

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../NewGameButton")
mouse_filter = 2
button_mask = 0
text = " load game"
alignment = 0

[node name="MailButton" type="Button" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../NewGameButton")
mouse_filter = 2
button_mask = 0
text = " messages (1)"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/MailButton"]
modulate = Color(1, 0, 0, 1)
position = Vector2(91, 1)
scale = Vector2(4.5, 5)
texture = ExtResource("5_rqmy0")
centered = false

[node name="MailPanel" type="Panel" parent="VBoxContainer/MailButton"]
visible = false
z_index = 1
layout_mode = 0
offset_left = -27.0
offset_top = -81.0
offset_right = 124.0
offset_bottom = 23.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MailButton/MailPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 149.0
offset_bottom = 102.0
text = "undesirable hate

you are my repugnance abominable: my avoided animus. you are my repulsion beloathed: my anathematised hate. my undesirable odium disgracefully strangles your avoided anathema. my repulsive dislike loathes your shunned resentment. you are my malevolence undesirable: my despised spite.

yours unforgivably,
m.d.p."

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
focus_neighbor_top = NodePath("../LoadGameButton")
focus_neighbor_bottom = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../LoadGameButton")
mouse_filter = 2
button_mask = 0
text = " view credits"
alignment = 0

[node name="TextPanel" type="Panel" parent="VBoxContainer/CreditsButton"]
visible = false
z_index = 1
layout_mode = 0
offset_left = -27.0
offset_top = -81.0
offset_right = 124.0
offset_bottom = 23.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/CreditsButton/TextPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 149.0
offset_bottom = 102.0
text = "undesirable hate

you are my repugnance abominable: my avoided animus. you are my repulsion beloathed: my anathematised hate. my undesirable odium disgracefully strangles your avoided anathema. my repulsive dislike loathes your shunned resentment. you are my malevolence undesirable: my despised spite.

yours unforgivably,
m.d.p."

[node name="AutoscrollComponent" type="Node" parent="VBoxContainer/CreditsButton/TextPanel/RichTextLabel" node_paths=PackedStringArray("target")]
script = ExtResource("6_vbxvf")
target = NodePath("..")
speed = 0.9

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
focus_neighbor_top = NodePath("../LoadGameButton")
focus_neighbor_bottom = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../LoadGameButton")
mouse_filter = 2
button_mask = 0
text = " quit game"
alignment = 0

[node name="PressEsc" type="Label" parent="."]
modulate = Color(0.356863, 0.356863, 0.356863, 1)
layout_mode = 0
offset_left = 1.0
offset_top = 113.0
offset_right = 150.0
offset_bottom = 124.0
text = "press esc for options any time"

[node name="VersionText" type="Label" parent="."]
modulate = Color(0.356863, 0.356863, 0.356863, 1)
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 88.0
offset_bottom = 12.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
text = "ver "

[node name="LoadingScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="LoadingScreen"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 13.0
text = "loading."

[node name="EditorHelperTool" type="Node" parent="."]
script = ExtResource("8_ipbln")

[connection signal="meta_clicked" from="Label" to="." method="_on_label_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MailButton" to="." method="_on_mail_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
